feat: Implement anti-detection measures and robust browser control for Playwright automation, removing unused `index.ts`.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/main.js"
+    "start": "node dist/main.js",
+    "dev": "bun run build && bun run start"
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -13,5 +14,9 @@
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "playwright-extra": "^4.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
