--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "prisma:generate": "prisma generate",
+    "build": "bun run prisma:generate && tsc -p tsconfig.json && node src/scripts/copy-prisma-generated.mjs",
     "start": "node dist/main.js"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/node": "^25.0.3",
-    "playwright": "^1.57.0"
+    "playwright": "^1.57.0",
+    "prisma": "^7.2.0"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
+    "@types/pg": "^8.16.0",
+    "dotenv": "^17.2.3",
+    "pg": "^8.16.3"
   }
 }
