--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "playwright": "^1.57.0"
   },
@@ -16,7 +18,12 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "consola": "^3.4.2",
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
+    "open": "^11.0.0",
     "playwright-extra": "^4.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "socket.io": "^4.8.3"
   }
 }
