--- a/package.json
+++ b/package.json
@@ -11,19 +11,26 @@
     "@types/bun": "latest",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
-    "@types/node": "^25.0.3",
+    "@types/node": "^25.0.8",
+    "@types/ws": "^8.18.1",
     "playwright": "^1.57.0"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@prisma/adapter-better-sqlite3": "^7.2.0",
+    "@prisma/client": "^7.2.0",
+    "@types/better-sqlite3": "^7.6.13",
     "consola": "^3.4.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "open": "^11.0.0",
     "playwright-extra": "^4.3.6",
+    "prisma": "^7.2.0",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.8.3",
+    "tsx": "^4.21.0"
   }
 }
