--- a/package.json
+++ b/package.json
@@ -1,60 +1,12 @@
 {
-  "name": "nicogram-automation",
+  "name": "nicogram-automation-root",
   "private": true,
-  "type": "module",
+  "workspaces": [
+    "apps/*"
+  ],
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "start": "node dist/main.js",
-    "dev": "bun run build && bun run start"
-  },
-  "devDependencies": {
-    "@types/bun": "latest",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
-    "@types/node": "^25.0.8",
-    "@types/ws": "^8.18.1",
-    "playwright": "^1.57.0",
-    "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "autoprefixer": "^10.4.23",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "postcss": "^8.5.6",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.4",
-    "vite": "npm:rolldown-vite@7.2.5"
-  },
-  "peerDependencies": {
-    "typescript": "^5.9.3"
-  },
-  "dependencies": {
-    "@prisma/adapter-better-sqlite3": "^7.2.0",
-    "@prisma/client": "^7.2.0",
-    "@types/better-sqlite3": "^7.6.13",
-    "consola": "^3.4.2",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "open": "^11.0.0",
-    "playwright-extra": "^4.3.6",
-    "prisma": "^7.2.0",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "socket.io": "^4.8.3",
-    "tsx": "^4.21.0",
-    "@tailwindcss/vite": "^4.1.18",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.24.10",
-    "lucide-react": "^0.562.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "socket.io-client": "^4.8.3",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18",
-    "tailwindcss-animate": "^1.0.7"
+    "dev:api": "bun run --filter @apps/api dev",
+    "dev:frontend": "bun run --filter @apps/frontend dev",
+    "install:all": "bun install"
   }
 }
